exports[`image png getPNG returns image as PDF objects 1`] = `
Object {
  "BitsPerComponent": 8,
  "ColorSpace": "DeviceRGB",
  "Filter": "FlateDecode",
  "Height": 18,
  "SMask": Object {
    "BitsPerComponent": 8,
    "ColorSpace": "DeviceGray",
    "Filter": "FlateDecode",
    "Height": 18,
    "Subtype": "Image",
    "Width": 50,
    "data": Object {
      "data": Array [
        120,
        156,
        165,
        147,
        93,
        72,
        20,
        81,
        20,
        199,
        255,
        179,
        179,
        54,
        134,
        59,
        179,
        31,
        115,
        43,
        145,
        108,
        125,
        89,
        42,
        232,
        11,
        146,
        18,
        84,
        250,
        162,
        94,
        236,
        195,
        74,
        146,
        196,
        98,
        205,
        18,
        163,
        8,
        182,
        40,
        41,
        123,
        81,
        183,
        47,
        168,
        160,
        79,
        10,
        35,
        31,
        34,
        40,
        132,
        8,
        10,
        194,
        41,
        31,
        23,
        132,
        180,
        135,
        40,
        165,
        168,
        152,
        7,
        97,
        89,
        66,
        45,
        194,
        214,
        150,
        118,
        79,
        231,
        222,
        245,
        169,
        167,
        141,
        206,
        195,
        57,
        191,
        57,
        119,
        254,
        115,
        207,
        185,
        247,
        12,
        240,
        239,
        22,
        57,
        207,
        22,
        111,
        95,
        239,
        41,
        88,
        97,
        239,
        203,
        100,
        154,
        162,
        231,
        82,
        195,
        203,
        11,
        150,
        120,
        211,
        195,
        236,
        69,
        242,
        99,
        113,
        161,
        138,
        149,
        116,
        75,
        134,
        211,
        116,
        64,
        134,
        69,
        205,
        23,
        218,
        124,
        42,
        95,
        182,
        55,
        190,
        211,
        226,
        168,
        215,
        116,
        196,
        86,
        168,
        106,
        26,
        186,
        54,
        89,
        117,
        12,
        109,
        180,
        95,
        62,
        111,
        167,
        43,
        236,
        163,
        63,
        122,
        207,
        38,
        191,
        216,
        76,
        187,
        39,
        122,
        58,
        103,
        158,
        1,
        126,
        39,
        209,
        50,
        148,
        171,
        4,
        170,
        167,
        238,
        238,
        232,
        207,
        62,
        225,
        165,
        123,
        180,
        68,
        42,
        234,
        168,
        15,
        104,
        161,
        195,
        64,
        61,
        93,
        100,
        65,
        238,
        8,
        240,
        98,
        12,
        250,
        200,
        103,
        19,
        107,
        169,
        17,
        85,
        63,
        47,
        3,
        53,
        212,
        193,
        175,
        190,
        157,
        210,
        164,
        226,
        40,
        157,
        65,
        73,
        242,
        13,
        211,
        124,
        122,
        9,
        195,
        29,
        101,
        138,
        248,
        208,
        78,
        123,
        184,
        213,
        101,
        64,
        98,
        220,
        11,
        28,
        167,
        13,
        128,
        239,
        183,
        163,
        202,
        190,
        74,
        187,
        184,
        192,
        152,
        82,
        12,
        34,
        74,
        167,
        242,
        93,
        186,
        147,
        134,
        138,
        91,
        168,
        135,
        253,
        163,
        172,
        9,
        172,
        163,
        184,
        204,
        20,
        185,
        233,
        50,
        220,
        160,
        106,
        198,
        213,
        116,
        19,
        215,
        20,
        1,
        33,
        222,
        79,
        89,
        55,
        213,
        2,
        214,
        247,
        119,
        140,
        39,
        105,
        155,
        204,
        180,
        202,
        111,
        60,
        167,
        48,
        99,
        39,
        239,
        150,
        39,
        160,
        82,
        118,
        39,
        173,
        159,
        22,
        202,
        162,
        30,
        40,
        92,
        192,
        126,
        77,
        202,
        45,
        1,
        122,
        169,
        138,
        119,
        251,
        240,
        90,
        195,
        29,
        218,
        202,
        89,
        3,
        165,
        36,
        47,
        203,
        171,
        243,
        249,
        84,
        192,
        120,
        74,
        93,
        124,
        254,
        211,
        46,
        180,
        197,
        199,
        210,
        142,
        212,
        109,
        166,
        75,
        154,
        231,
        118,
        106,
        21,
        80,
        75,
        3,
        17,
        43,
        122,
        29,
        120,
        149,
        109,
        50,
        150,
        58,
        229,
        104,
        166,
        19,
        226,
        126,
        61,
        117,
        135,
        251,
        102,
        232,
        215,
        248,
        228,
        232,
        195,
        67,
        234,
        188,
        16,
        155,
        30,
        251,
        52,
        80,
        33,
        233,
        224,
        183,
        220,
        215,
        199,
        165,
        124,
        143,
        14,
        101,
        70,
        90,
        185,
        161,
        247,
        52,
        180,
        209,
        156,
        200,
        37,
        254,
        30,
        0,
        61,
        236,
        157,
        37,
        79,
        185,
        158,
        7,
        75,
        168,
        160,
        177,
        28,
        115,
        230,
        21,
        48,
        68,
        255,
        111,
        166,
        16,
        34,
        100,
        7,
        205,
        217,
        185,
        157,
        107,
        7,
        131,
        126,
        245,
        167,
        20,
        219,
        34,
        100,
        50,
        121,
        252,
        66,
        4,
        120,
        85,
        11,
        138,
        64,
        145,
        102,
        139,
        192,
        31,
        108,
        221,
        178,
        59,
      ],
      "type": "Buffer",
    },
  },
  "Subtype": "Image",
  "Width": 50,
  "data": Object {
    "data": Array [
      120,
      156,
      237,
      82,
      93,
      111,
      162,
      80,
      16,
      53,
      89,
      63,
      16,
      68,
      192,
      84,
      140,
      81,
      220,
      100,
      193,
      109,
      20,
      98,
      4,
      26,
      5,
      44,
      21,
      99,
      219,
      244,
      195,
      110,
      250,
      210,
      255,
      211,
      159,
      190,
      103,
      238,
      197,
      203,
      93,
      221,
      183,
      125,
      112,
      31,
      58,
      193,
      203,
      204,
      153,
      115,
      206,
      140,
      64,
      173,
      246,
      255,
      198,
      225,
      112,
      248,
      133,
      139,
      126,
      148,
      188,
      190,
      189,
      1,
      57,
      188,
      191,
      127,
      126,
      126,
      94,
      112,
      171,
      253,
      126,
      255,
      242,
      242,
      242,
      204,
      2,
      201,
      211,
      211,
      211,
      243,
      235,
      43,
      165,
      172,
      188,
      224,
      98,
      69,
      81,
      60,
      62,
      62,
      220,
      63,
      60,
      200,
      200,
      253,
      254,
      30,
      16,
      146,
      75,
      109,
      181,
      219,
      237,
      182,
      197,
      221,
      221,
      221,
      86,
      6,
      183,
      249,
      118,
      203,
      80,
      25,
      188,
      189,
      189,
      45,
      138,
      156,
      168,
      232,
      157,
      45,
      188,
      217,
      108,
      56,
      142,
      115,
      189,
      94,
      11,
      252,
      227,
      227,
      3,
      32,
      169,
      242,
      109,
      158,
      239,
      101,
      9,
      222,
      84,
      94,
      16,
      138,
      128,
      100,
      151,
      231,
      162,
      133,
      50,
      77,
      146,
      52,
      77,
      101,
      126,
      194,
      144,
      36,
      203,
      4,
      146,
      37,
      20,
      116,
      102,
      25,
      53,
      147,
      116,
      181,
      90,
      201,
      38,
      73,
      154,
      240,
      32,
      225,
      209,
      45,
      142,
      99,
      104,
      128,
      172,
      215,
      25,
      80,
      100,
      171,
      205,
      166,
      26,
      177,
      66,
      39,
      205,
      178,
      53,
      73,
      146,
      76,
      222,
      33,
      14,
      227,
      48,
      10,
      33,
      151,
      183,
      138,
      151,
      203,
      48,
      140,
      226,
      168,
      4,
      35,
      22,
      32,
      242,
      114,
      25,
      199,
      81,
      20,
      67,
      200,
      203,
      16,
      212,
      8,
      87,
      196,
      203,
      155,
      155,
      27,
      32,
      252,
      41,
      129,
      181,
      140,
      150,
      155,
      235,
      107,
      190,
      97,
      124,
      164,
      145,
      91,
      20,
      10,
      67,
      214,
      138,
      226,
      48,
      20,
      11,
      4,
      190,
      63,
      15,
      130,
      147,
      215,
      225,
      35,
      2,
      192,
      132,
      47,
      22,
      11,
      226,
      204,
      125,
      209,
      229,
      8,
      239,
      122,
      158,
      135,
      94,
      224,
      87,
      14,
      179,
      217,
      12,
      106,
      36,
      243,
      96,
      238,
      7,
      48,
      159,
      115,
      28,
      239,
      113,
      49,
      155,
      149,
      67,
      3,
      154,
      32,
      62,
      3,
      54,
      206,
      231,
      42,
      94,
      186,
      174,
      59,
      157,
      254,
      56,
      217,
      10,
      179,
      60,
      194,
      167,
      200,
      127,
      34,
      241,
      92,
      0,
      162,
      11,
      137,
      71,
      136,
      139,
      28,
      28,
      193,
      60,
      9,
      210,
      176,
      248,
      139,
      185,
      231,
      77,
      93,
      87,
      98,
      146,
      229,
      53,
      123,
      164,
      136,
      241,
      120,
      236,
      140,
      157,
      209,
      247,
      145,
      172,
      194,
      227,
      4,
      62,
      153,
      76,
      28,
      199,
      33,
      142,
      67,
      44,
      148,
      130,
      48,
      97,
      1,
      97,
      233,
      224,
      140,
      229,
      110,
      229,
      12,
      131,
      201,
      168,
      118,
      22,
      163,
      17,
      164,
      14,
      55,
      231,
      75,
      50,
      15,
      71,
      16,
      108,
      219,
      30,
      244,
      7,
      8,
      89,
      69,
      245,
      192,
      22,
      32,
      175,
      134,
      195,
      225,
      31,
      4,
      187,
      15,
      45,
      207,
      237,
      129,
      45,
      119,
      121,
      12,
      175,
      174,
      250,
      140,
      116,
      190,
      21,
      13,
      29,
      12,
      122,
      189,
      94,
      89,
      94,
      177,
      37,
      36,
      166,
      73,
      97,
      105,
      154,
      38,
      144,
      110,
      183,
      75,
      152,
      97,
      137,
      173,
      76,
      195,
      48,
      76,
      83,
      152,
      48,
      149,
      209,
      51,
      76,
      158,
      91,
      150,
      97,
      26,
      166,
      110,
      89,
      39,
      163,
      181,
      190,
      102,
      88,
      86,
      207,
      48,
      206,
      183,
      34,
      119,
      104,
      204,
      210,
      193,
      180,
      186,
      150,
      101,
      246,
      204,
      210,
      191,
      221,
      110,
      171,
      154,
      170,
      30,
      87,
      106,
      233,
      173,
      18,
      33,
      172,
      218,
      19,
      185,
      218,
      81,
      209,
      226,
      37,
      107,
      87,
      4,
      93,
      209,
      85,
      230,
      210,
      237,
      182,
      74,
      114,
      91,
      173,
      252,
      85,
      8,
      137,
      217,
      233,
      116,
      192,
      225,
      38,
      196,
      209,
      218,
      154,
      214,
      214,
      117,
      93,
      99,
      243,
      8,
      81,
      59,
      138,
      162,
      52,
      27,
      205,
      102,
      163,
      142,
      131,
      110,
      116,
      240,
      20,
      247,
      198,
      249,
      191,
      107,
      181,
      90,
      117,
      244,
      234,
      141,
      111,
      196,
      170,
      215,
      20,
      69,
      238,
      66,
      194,
      116,
      236,
      222,
      108,
      98,
      108,
      217,
      80,
      171,
      86,
      147,
      157,
      146,
      132,
      6,
      2,
      85,
      234,
      117,
      42,
      105,
      21,
      226,
      156,
      143,
      254,
      138,
      175,
      248,
      247,
      248,
      13,
      129,
      190,
      132,
      137,
    ],
    "type": "Buffer",
  },
}
`;

exports[`splitAlpha alpha 1`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    37,
    134,
    134,
    134,
    134,
    132,
    104,
    64,
    2,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    19,
    93,
    250,
    250,
    90,
    96,
    133,
    233,
    204,
    45,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    4,
    247,
    204,
    0,
    0,
    0,
    20,
    231,
    218,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    47,
    255,
    149,
    0,
    0,
    0,
    0,
    121,
    255,
    98,
    0,
    0,
    0,
    0,
    30,
    92,
    135,
    102,
    12,
    0,
    0,
    0,
    0,
    0,
    26,
    89,
    132,
    81,
    14,
    0,
    0,
    0,
    3,
    60,
    119,
    113,
    46,
    0,
    0,
    0,
    0,
    19,
    84,
    129,
    67,
    14,
    75,
    0,
    0,
    0,
    102,
    255,
    94,
    0,
    0,
    0,
    0,
    78,
    255,
    141,
    0,
    0,
    0,
    96,
    243,
    155,
    124,
    231,
    222,
    19,
    0,
    0,
    0,
    83,
    237,
    131,
    123,
    248,
    179,
    0,
    0,
    15,
    186,
    197,
    97,
    200,
    254,
    52,
    0,
    0,
    59,
    239,
    153,
    79,
    171,
    253,
    174,
    0,
    0,
    0,
    156,
    255,
    40,
    0,
    0,
    0,
    0,
    75,
    255,
    159,
    0,
    0,
    97,
    255,
    105,
    0,
    0,
    80,
    255,
    136,
    0,
    0,
    83,
    254,
    107,
    0,
    0,
    183,
    215,
    0,
    3,
    205,
    221,
    13,
    0,
    55,
    255,
    87,
    0,
    56,
    246,
    140,
    0,
    0,
    60,
    255,
    119,
    0,
    0,
    0,
    210,
    239,
    1,
    0,
    0,
    0,
    0,
    108,
    255,
    122,
    0,
    11,
    231,
    206,
    0,
    0,
    0,
    22,
    255,
    187,
    0,
    7,
    224,
    214,
    0,
    0,
    0,
    37,
    12,
    0,
    104,
    255,
    86,
    0,
    0,
    4,
    44,
    0,
    0,
    197,
    228,
    4,
    0,
    0,
    114,
    255,
    65,
    0,
    0,
    12,
    252,
    186,
    0,
    0,
    0,
    0,
    0,
    142,
    255,
    82,
    0,
    102,
    255,
    113,
    0,
    0,
    0,
    22,
    255,
    189,
    0,
    96,
    255,
    118,
    0,
    0,
    0,
    0,
    0,
    0,
    224,
    238,
    7,
    0,
    0,
    0,
    0,
    0,
    70,
    255,
    131,
    0,
    0,
    0,
    168,
    253,
    13,
    0,
    0,
    63,
    255,
    132,
    0,
    0,
    0,
    0,
    5,
    224,
    247,
    26,
    0,
    147,
    255,
    59,
    0,
    0,
    0,
    51,
    255,
    148,
    0,
    145,
    255,
    59,
    0,
    0,
    0,
    0,
    0,
    18,
    255,
    187,
    0,
    0,
    0,
    0,
    0,
    0,
    130,
    255,
    61,
    0,
    0,
    14,
    241,
    212,
    0,
    0,
    0,
    117,
    255,
    77,
    0,
    0,
    0,
    0,
    99,
    255,
    131,
    0,
    0,
    180,
    255,
    31,
    0,
    0,
    0,
    123,
    255,
    82,
    0,
    180,
    255,
    31,
    0,
    0,
    0,
    0,
    0,
    52,
    255,
    159,
    0,
    0,
    0,
    0,
    0,
    0,
    171,
    255,
    28,
    0,
    0,
    114,
    255,
    163,
    0,
    0,
    0,
    171,
    255,
    23,
    0,
    0,
    0,
    54,
    233,
    224,
    11,
    0,
    0,
    155,
    255,
    56,
    0,
    0,
    5,
    217,
    203,
    1,
    0,
    152,
    255,
    76,
    0,
    0,
    0,
    7,
    0,
    24,
    255,
    204,
    0,
    0,
    0,
    4,
    3,
    0,
    156,
    255,
    32,
    0,
    7,
    176,
    255,
    129,
    0,
    0,
    30,
    245,
    224,
    0,
    1,
    39,
    110,
    247,
    186,
    23,
    0,
    0,
    0,
    69,
    255,
    137,
    1,
    2,
    150,
    233,
    48,
    0,
    0,
    61,
    255,
    185,
    37,
    14,
    96,
    146,
    0,
    0,
    188,
    253,
    90,
    7,
    41,
    186,
    29,
    0,
    92,
    255,
    115,
    20,
    158,
    80,
    255,
    130,
    31,
    159,
    248,
    255,
    249,
    228,
    238,
    214,
    165,
    101,
    1,
    0,
    0,
    0,
    0,
    0,
    113,
    245,
    215,
    220,
    185,
    32,
    0,
    0,
    0,
    0,
    100,
    240,
    254,
    235,
    169,
    24,
    0,
    0,
    26,
    186,
    255,
    250,
    205,
    99,
    0,
    0,
    18,
    213,
    255,
    200,
    66,
    13,
    237,
    254,
    197,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    3,
    31,
    4,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
    29,
    3,
    0,
    0,
    0,
    0,
    0,
    0,
    14,
    20,
    0,
    0,
    0,
    0,
    0,
    1,
    24,
    0,
    0,
    0,
    6,
    21,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    13,
    20,
    20,
    20,
    18,
    19,
    17,
    13,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    9,
    19,
    17,
    17,
    15,
    2,
    0,
    0,
    0,
    0,
    8,
    19,
    20,
    18,
    13,
    2,
    0,
    0,
    2,
    15,
    20,
    20,
    16,
    8,
    0,
    0,
    1,
    17,
    20,
    16,
    5,
    1,
    19,
    20,
    16,
  ],
  "type": "Buffer",
}
`;

exports[`splitAlpha image 1`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    76,
    76,
    76,
    78,
    76,
    76,
    78,
    78,
    76,
    76,
    78,
    76,
    78,
    76,
    76,
    75,
    77,
    77,
    76,
    76,
    76,
    76,
    80,
    80,
    128,
    128,
    128,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    67,
    67,
    67,
    74,
    74,
    74,
    73,
    73,
    73,
    73,
    73,
    73,
    74,
    74,
    74,
    72,
    72,
    72,
    73,
    75,
    75,
    73,
    73,
    74,
    74,
    73,
    73,
    74,
    74,
    74,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    64,
    64,
    64,
    70,
    70,
    69,
    68,
    69,
    69,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    64,
    64,
    64,
    68,
    67,
    68,
    69,
    68,
    69,
    64,
    64,
    64,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    65,
    65,
    65,
    63,
    64,
    62,
    62,
    62,
    63,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    63,
    61,
    63,
    63,
    63,
    64,
    62,
    62,
    62,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    60,
    60,
    60,
    64,
    64,
    61,
    62,
    62,
    62,
    63,
    63,
    63,
    64,
    64,
    64,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    59,
    59,
    59,
    63,
    63,
    63,
    64,
    64,
    64,
    63,
    63,
    63,
    55,
    55,
    55,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    85,
    85,
    85,
    64,
    64,
    64,
    62,
    62,
    62,
    63,
    61,
    63,
    61,
    61,
    67,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    67,
    67,
    67,
    61,
    64,
    61,
    63,
    61,
    61,
    61,
    61,
    61,
    55,
    55,
    55,
    65,
    61,
    61,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    55,
    55,
    55,
    57,
    56,
    56,
    57,
    57,
    57,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    56,
    56,
    56,
    57,
    57,
    57,
    56,
    58,
    58,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    58,
    56,
    56,
    56,
    56,
    56,
    58,
    56,
    56,
    56,
    58,
    58,
    56,
    56,
    57,
    57,
    56,
    57,
    54,
    54,
    54,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    55,
    55,
    55,
    56,
    57,
    56,
    56,
    56,
    56,
    56,
    56,
    56,
    57,
    57,
    57,
    56,
    57,
    57,
    0,
    0,
    0,
    0,
    0,
    0,
    51,
    51,
    51,
    56,
    58,
    56,
    57,
    57,
    57,
    55,
    55,
    58,
    57,
    56,
    57,
    56,
    57,
    57,
    54,
    59,
    59,
    0,
    0,
    0,
    0,
    0,
    0,
    56,
    56,
    56,
    57,
    54,
    57,
    57,
    57,
    57,
    58,
    58,
    55,
    57,
    57,
    57,
    56,
    56,
    58,
    57,
    57,
    57,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    51,
    49,
    51,
    49,
    50,
    49,
    51,
    51,
    51,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    51,
    48,
    48,
    49,
    49,
    50,
    51,
    50,
    51,
    0,
    0,
    0,
    0,
    0,
    0,
    50,
    50,
    50,
    50,
    50,
    50,
    49,
    51,
    49,
    0,
    0,
    0,
    0,
    0,
    0,
    48,
    51,
    51,
    50,
    50,
    51,
    51,
    49,
    51,
    0,
    0,
    0,
    0,
    0,
    0,
    49,
    49,
    49,
    50,
    50,
    49,
    50,
    50,
    50,
    0,
    0,
    0,
    0,
    0,
    0,
    52,
    52,
    52,
    49,
    49,
    49,
    0,
    0,
    0,
    85,
    85,
    85,
    50,
    51,
    51,
    48,
    50,
    48,
    59,
    39,
    39,
    0,
    0,
    0,
    51,
    51,
    51,
    51,
    50,
    49,
    50,
    50,
    50,
    0,
    0,
    0,
    50,
    50,
    50,
    49,
    50,
    49,
    49,
    51,
    49,
    0,
    0,
    0,
    0,
    0,
    0,
    51,
    51,
    51,
    51,
    50,
    50,
    51,
    49,
    49,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    44,
    43,
    43,
    42,
    44,
    44,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    43,
    43,
    43,
    43,
    44,
    42,
    44,
    44,
    44,
    0,
    0,
    0,
    46,
    46,
    46,
    44,
    43,
    43,
    42,
    42,
    43,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    46,
    46,
    46,
    44,
    43,
    43,
    44,
    44,
    44,
    0,
    0,
    0,
    36,
    36,
    36,
    43,
    42,
    42,
    44,
    43,
    44,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    41,
    41,
    41,
    43,
    43,
    43,
    0,
    0,
    0,
    42,
    44,
    42,
    43,
    44,
    43,
    42,
    44,
    42,
    0,
    0,
    0,
    0,
    0,
    0,
    64,
    64,
    64,
    46,
    41,
    41,
    0,
    0,
    0,
    0,
    0,
    0,
    44,
    44,
    43,
    43,
    43,
    43,
    64,
    64,
    64,
    0,
    0,
    0,
    0,
    0,
    0,
    43,
    43,
    43,
    43,
    44,
    43,
    43,
    43,
    43,
    0,
    0,
    0,
    0,
    0,
    0,
    43,
    43,
    43,
    35,
    35,
    35,
    37,
    37,
    34,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    36,
    36,
    36,
    36,
    35,
    35,
    37,
    37,
    37,
    0,
    0,
    0,
    38,
    35,
    35,
    37,
    36,
    35,
    36,
    36,
    36,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    35,
    35,
    35,
    36,
    36,
    35,
    36,
    36,
    35,
    0,
    0,
    0,
    37,
    37,
    37,
    36,
    35,
    35,
    37,
    37,
    37,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    35,
    36,
    36,
    36,
    36,
    36,
    36,
    36,
    36,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    36,
    36,
    36,
    36,
    36,
    36,
    37,
    35,
    35,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    35,
    36,
    35,
    35,
    35,
    36,
    39,
    39,
    39,
    0,
    0,
    0,
    0,
    0,
    0,
    28,
    28,
    28,
    29,
    28,
    29,
    27,
    31,
    27,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    51,
    51,
    51,
    28,
    28,
    28,
    30,
    30,
    30,
    29,
    29,
    29,
    0,
    0,
    0,
    28,
    29,
    28,
    28,
    28,
    29,
    30,
    30,
    30,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    30,
    30,
    30,
    30,
    30,
    30,
    29,
    28,
    29,
    0,
    0,
    0,
    28,
    28,
    28,
    29,
    29,
    28,
    30,
    30,
    30,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    28,
    28,
    28,
    29,
    30,
    29,
    29,
    30,
    27,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    27,
    27,
    29,
    28,
    29,
    29,
    29,
    29,
    29,
    0,
    0,
    0,
    0,
    0,
    0,
    36,
    36,
    36,
    28,
    28,
    29,
    29,
    28,
    29,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    22,
    22,
    22,
    23,
    21,
    23,
    23,
    23,
    23,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    23,
    23,
    23,
    23,
    23,
    22,
    23,
    23,
    23,
    0,
    0,
    0,
    0,
    0,
    0,
    23,
    23,
    23,
    23,
    22,
    23,
    25,
    25,
    25,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    23,
    23,
    23,
    23,
    22,
    21,
    22,
    22,
    22,
    0,
    0,
    0,
    23,
    23,
    23,
    22,
    23,
    22,
    25,
    25,
    25,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    25,
    20,
    20,
    21,
    23,
    22,
    21,
    22,
    22,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    22,
    22,
    22,
    23,
    23,
    23,
    18,
    18,
    18,
    0,
    0,
    0,
    0,
    0,
    0,
    22,
    20,
    22,
    22,
    23,
    21,
    23,
    22,
    22,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    16,
    16,
    16,
    16,
    16,
    17,
    11,
    11,
    11,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    14,
    14,
    14,
    16,
    16,
    16,
    16,
    15,
    17,
    23,
    23,
    23,
    0,
    0,
    0,
    0,
    0,
    0,
    16,
    15,
    15,
    15,
    16,
    16,
    18,
    18,
    18,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    16,
    16,
    15,
    18,
    15,
    16,
    0,
    0,
    0,
    0,
    0,
    0,
    17,
    17,
    15,
    16,
    15,
    16,
    13,
    17,
    17,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    11,
    21,
    11,
    15,
    17,
    17,
    18,
    15,
    15,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    16,
    16,
    15,
    17,
    16,
    15,
    16,
    16,
    16,
    0,
    0,
    0,
    0,
    0,
    0,
    16,
    17,
    14,
    17,
    17,
    16,
    18,
    16,
    18,
    0,
    0,
    0,
    0,
    0,
    0,
    9,
    9,
    9,
    10,
    11,
    10,
    10,
    11,
    11,
    0,
    0,
    0,
    0,
    0,
    0,
    7,
    13,
    7,
    9,
    9,
    9,
    10,
    11,
    10,
    10,
    10,
    10,
    11,
    11,
    11,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    11,
    11,
    11,
    10,
    12,
    10,
    9,
    9,
    9,
    0,
    0,
    0,
    0,
    0,
    0,
    10,
    10,
    10,
    10,
    11,
    10,
    11,
    11,
    11,
    0,
    0,
    0,
    0,
    0,
    0,
    13,
    8,
    13,
    10,
    10,
    11,
    10,
    10,
    11,
    14,
    14,
    7,
    0,
    0,
    0,
    11,
    11,
    11,
    10,
    9,
    10,
    0,
    0,
    0,
    0,
    0,
    0,
    9,
    9,
    9,
    10,
    10,
    10,
    9,
    9,
    11,
    0,
    0,
    0,
    12,
    12,
    12,
    10,
    10,
    11,
    9,
    9,
    9,
    0,
    0,
    0,
    11,
    11,
    11,
    10,
    11,
    9,
    11,
    11,
    9,
    13,
    13,
    13,
    11,
    10,
    11,
    10,
    10,
    10,
    11,
    11,
    11,
    10,
    10,
    12,
    8,
    8,
    8,
    6,
    5,
    6,
    6,
    5,
    4,
    5,
    6,
    6,
    6,
    6,
    5,
    4,
    6,
    6,
    6,
    5,
    5,
    6,
    6,
    6,
    6,
    5,
    6,
    5,
    5,
    5,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    7,
    7,
    7,
    4,
    6,
    5,
    6,
    4,
    5,
    3,
    5,
    6,
    6,
    6,
    4,
    0,
    8,
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    5,
    5,
    5,
    5,
    6,
    5,
    5,
    5,
    5,
    5,
    5,
    5,
    6,
    6,
    6,
    0,
    0,
    11,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    10,
    0,
    5,
    5,
    5,
    5,
    6,
    5,
    5,
    5,
    5,
    6,
    6,
    5,
    5,
    5,
    5,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    5,
    5,
    6,
    5,
    5,
    6,
    5,
    6,
    6,
    8,
    4,
    4,
    0,
    0,
    0,
    5,
    6,
    5,
    4,
    5,
    5,
    6,
    6,
    5,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;
